--- a/frontend/src/components/Front.css
+++ b/frontend/src/components/Front.css
@@ -22,10 +22,14 @@
     margin-top: 43%;
 
 }
-.Footer{
-    margin-bottom: 0%;
-    padding-top: 2%;
-}
+.Footer {
+    padding-top: 10em;
+    text-align: center;
+    /* position: fixed; */
+    bottom: 0;
+    width: 100%;
+    height: 25%;
+  }
 
 .logo{
     margin-left: 0%;
