--- a/frontend/src/components/FileUploadForm.css
+++ b/frontend/src/components/FileUploadForm.css
@@ -63,6 +63,7 @@
     background: #fff;
     border-radius: 10px;
     border: 1px solid rgba(8, 8, 8, 0.288);
+    font-size: 20px;
   }
   
   #file-input::file-selector-button {
