--- a/frontend/src/components/instructions.css
+++ b/frontend/src/components/instructions.css
@@ -1,30 +1,54 @@
 .instructions-container {
-  margin: 20px;
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 40px;
+  background-color: #f8f8f8;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-button {
+.instructions-container p {
+  font-size: 25px;
+  color: #333;
+  margin-bottom: 20px;
+}
+
+.instructions-container button {
+  display: inline-block;
   padding: 10px 20px;
-  background-color: #007bff;
+  font-size: 25px;
+  font-weight: 600;
   color: #fff;
+  background-color: #573b8a;
   border: none;
-  border-radius: 5px;
+  border-radius: 4px;
   cursor: pointer;
-  font-size: 16px;
+  transition: background-color 0.3s ease;
 }
 
-button:hover {
-  background-color: #0056b3;
+.instructions-container button:hover {
+  background-color: #6d44b8;
 }
 
-ol {
-  margin-top: 10px;
+.instructions-container ol {
+  margin-left: 40px;
+  margin-bottom: 20px;
+  padding-left: 20px;
 }
 
-a {
-  color: #007bff;
+.instructions-container li {
+  font-size: 25px;
+  color: #555;
+  margin-bottom: 10px;
+}
+
+.instructions-container a {
+  color: #2f3fcf;
+  font-weight: 500;
   text-decoration: none;
+  transition: color 0.3s ease;
 }
 
-a:hover {
-  text-decoration: underline;
+.instructions-container a:hover {
+  color: #6d44b8;
 }
